// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveBasicStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "LogGroupName": {
      "Description": "Name of the CloudWatch Log Group",
      "Value": {
        "Ref": "ArchiveLogGroup397AA1AB",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 1,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "!{timestamp:yyyy/MM/dd/HH}/",
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveLogGroup397AA1AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/app",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter": {
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "ArchiveLogGroup397AA1AB",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "firehose:PutRecord",
                    "firehose:PutRecordBatch",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::GetAtt": [
                      "ArchiveDeliveryStream497AB609",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToFirehose",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveBasicStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 2,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExistingStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "ImportedLogGroupName": {
      "Description": "Name of the imported (existing) CloudWatch Log Group",
      "Value": "/aws/lambda/test-function",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 1,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "!{timestamp:yyyy/MM/dd/HH}/",
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter": {
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": "/aws/lambda/test-function",
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:/aws/lambda/test-function:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "firehose:PutRecord",
                    "firehose:PutRecordBatch",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::GetAtt": [
                      "ArchiveDeliveryStream497AB609",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToFirehose",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveExistingStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 1,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLifecycleStack Complete CloudFormation template snapshot 1`] = `
{
  "Outputs": {
    "ArchiveBucketName": {
      "Description": "Name of the S3 Archive Bucket",
      "Value": {
        "Ref": "ArchiveBucket9DECBF5D",
      },
    },
    "ArchiveDeliveryStreamName": {
      "Description": "Name of the Firehose Delivery Stream",
      "Value": {
        "Ref": "ArchiveDeliveryStream497AB609",
      },
    },
    "LifecycleSummary": {
      "Description": "Summary of the S3 lifecycle transition rules",
      "Value": "IA:30d → Glacier:90d → DeepArchive:365d → Expire:2555d",
    },
    "LogGroupName": {
      "Description": "Name of the CloudWatch Log Group",
      "Value": {
        "Ref": "ArchiveLogGroup397AA1AB",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ArchiveBucket9DECBF5D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "Id": "MoveToIAAfter30Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 30,
                },
              ],
            },
            {
              "Id": "MoveToGlacierAfter90Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "GLACIER_IR",
                  "TransitionInDays": 90,
                },
              ],
            },
            {
              "Id": "MoveToDeepArchiveAfter365Days",
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "DEEP_ARCHIVE",
                  "TransitionInDays": 365,
                },
              ],
            },
            {
              "ExpirationInDays": 2555,
              "Id": "ExpireCurrentObjectsAfter2555Days",
              "Status": "Enabled",
            },
            {
              "Id": "NoncurrentVersionTransitionToIAAfter30Days",
              "NoncurrentVersionTransitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 30,
                },
              ],
              "Status": "Enabled",
            },
            {
              "Id": "ExpireNonCurrentVersionsAfter90Days",
              "NoncurrentVersionExpiration": {
                "NewerNoncurrentVersions": 3,
                "NoncurrentDays": 90,
              },
              "Status": "Enabled",
            },
            {
              "AbortIncompleteMultipartUpload": {
                "DaysAfterInitiation": 7,
              },
              "Id": "AbortIncompleteMultipartUploadsAfter7Days",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketAutoDeleteObjectsCustomResource9EFE6D2E": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ArchiveBucketPolicyF1A75978",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "ArchiveBucketPolicyF1A75978": {
      "Properties": {
        "Bucket": {
          "Ref": "ArchiveBucket9DECBF5D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ArchiveDeliveryStream497AB609": {
      "DependsOn": [
        "FirehoseRoleDefaultPolicyF034DFF7",
      ],
      "Properties": {
        "DeliveryStreamEncryptionConfigurationInput": {
          "KeyType": "AWS_OWNED_CMK",
        },
        "DeliveryStreamType": "DirectPut",
        "ExtendedS3DestinationConfiguration": {
          "BucketARN": {
            "Fn::GetAtt": [
              "ArchiveBucket9DECBF5D",
              "Arn",
            ],
          },
          "BufferingHints": {
            "IntervalInSeconds": 60,
            "SizeInMBs": 1,
          },
          "CloudWatchLoggingOptions": {
            "Enabled": true,
            "LogGroupName": {
              "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
            },
            "LogStreamName": {
              "Ref": "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1",
            },
          },
          "CompressionFormat": "GZIP",
          "CustomTimeZone": "Asia/Tokyo",
          "ErrorOutputPrefix": "!{firehose:error-output-type}/!{timestamp:yyyy/MM/dd}/",
          "Prefix": "!{timestamp:yyyy/MM/dd/HH}/",
          "RoleARN": {
            "Fn::GetAtt": [
              "FirehoseRoleAA67C190",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "ArchiveDeliveryStreamLogGroupBCA5504D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveDeliveryStreamLogGroupS3DestinationBDCFB4B1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": {
          "Ref": "ArchiveDeliveryStreamLogGroupBCA5504D",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "ArchiveLogGroup397AA1AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/TestProject/test/app-lifecycle",
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "ArchiveBucket9DECBF5D",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlSubscriptionFilter": {
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "ArchiveDeliveryStream497AB609",
            "Arn",
          ],
        },
        "FilterPattern": "",
        "LogGroupName": {
          "Ref": "ArchiveLogGroup397AA1AB",
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "CwlToFirehoseRole124D1583",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "CwlToFirehoseRole124D1583": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:ap-northeast-1:123456789012:log-group:*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "firehose:PutRecord",
                    "firehose:PutRecordBatch",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::GetAtt": [
                      "ArchiveDeliveryStream497AB609",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToFirehose",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleAA67C190": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "s3:AbortMultipartUpload",
                    "s3:ListBucket",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucketMultipartUploads",
                    "s3:ListMultipartUploadParts",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ArchiveBucket9DECBF5D",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "ArchiveBucket9DECBF5D",
                              "Arn",
                            ],
                          },
                          "/*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "AllowPutToS3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FirehoseRoleDefaultPolicyF034DFF7": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ArchiveBucket9DECBF5D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ArchiveBucket9DECBF5D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ArchiveDeliveryStreamLogGroupBCA5504D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FirehoseRoleDefaultPolicyF034DFF7",
        "Roles": [
          {
            "Ref": "FirehoseRoleAA67C190",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Stack Snapshot Tests CloudwatchLogsS3ArchiveLifecycleStack Resource types and counts 1`] = `
{
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 3,
  "AWS::KinesisFirehose::DeliveryStream": 1,
  "AWS::Lambda::Function": 1,
  "AWS::Logs::LogGroup": 2,
  "AWS::Logs::LogStream": 1,
  "AWS::Logs::SubscriptionFilter": 1,
  "AWS::S3::Bucket": 1,
  "AWS::S3::BucketPolicy": 1,
  "Custom::S3AutoDeleteObjects": 1,
}
`;
